started with polymer

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -273,6 +273,7 @@ play.filters {
 
     # The X-Permitted-Cross-Domain-Policies header. If null, the header is not set.
     #permittedCrossDomainPolicies = "master-only"
+    contentSecurityPolicy = "default-src 'self'; connect-src 'self' ws://localhost:9000 ; script-src 'unsafe-inline' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ https://unpkg.com/; style-src 'unsafe-inline' 'self' https://maxcdn.bootstrapcdn.com/bootstrap/ https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css;  font-src * data:; img-src 'self' * data:"
 
     # The Content-Security-Policy header. If null, the header is not set.
     #contentSecurityPolicy = "default-src 'self'"
