--- a/conf/application.conf
+++ b/conf/application.conf
@@ -269,7 +269,7 @@ play.filters {
     #xssProtection = "1; mode=block"
 
     # The X-Content-Type-Options header. If null, the header is not set.
-    #contentTypeOptions = "nosniff"
+    contentTypeOptions = "nginx"
 
     # The X-Permitted-Cross-Domain-Policies header. If null, the header is not set.
     #permittedCrossDomainPolicies = "master-only"
