--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "de.htwg.wt.mill",
-  "version": "1.0.0",
-  "description": "[<img src=\"https://img.shields.io/travis/playframework/play-scala-starter-example.svg\"/>](https://travis-ci.org/playframework/play-scala-starter-example)",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib",
-    "test": "test"
-  },
-  "dependencies": {
+  "dependencies": {},
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ],
+  "devDependencies": {
+    "@types/node": "^10.12.15",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "bootstrap": "^4.4.1",
+    "bootstrap-vue": "^2.1.0",
+    "css-loader": "^0.28.7",
+    "jquery": "^3.4.1",
+    "node-sass": "^4.5.3",
+    "popper.js": "^1.16.0",
+    "sass-loader": "^6.0.6",
+    "ts-loader": "^5.3.1",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
+    "typescript": "^3.2.2",
+    "vue": "^2.5.21",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.21",
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2",
     "@webcomponents/webcomponentsjs": "^2.4.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
-    "polymer-cli": "^1.9.11",
-    "vue": "^2.6.11"
-  },
-  "devDependencies": {},
-  "scripts": {
-    "test": "mocha"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Slimtoni/de.htwg.wt.Mill.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Slimtoni/de.htwg.wt.Mill/issues"
-  },
-  "homepage": "https://github.com/Slimtoni/de.htwg.wt.Mill#readme"
+    "polymer-cli": "^1.9.11"
+  }
 }
