--- a/conf/application.conf
+++ b/conf/application.conf
@@ -275,7 +275,7 @@ play.filters {
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    contentSecurityPolicy = "default-src 'self'; connect-src 'self' ws://localhost:9000 ; script-src 'unsafe-inline' 'unsafe-eval' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ https://unpkg.com/; style-src 'unsafe-inline' 'self' https://maxcdn.bootstrapcdn.com/bootstrap/ https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css;  font-src * data:; img-src 'self' * data:"
+    contentSecurityPolicy = "default-src 'self'; connect-src 'self' ws://localhost:9000 ; script-src 'unsafe-inline' 'unsafe-eval' 'self' https://code.jquery.com/ https://cdnjs.cloudflare.com/ajax/libs/popper.js/ https://maxcdn.bootstrapcdn.com/bootstrap/ https://unpkg.com/; style-src 'unsafe-inline' 'self' https://maxcdn.bootstrapcdn.com/bootstrap/ https://use.fontawesome.com/releases/v5.11.2/css/all.css https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css;  font-src * data:; img-src 'self' * data:"
 
   }
 
