--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,11 +1,11 @@
-# This is the main configuration file for the application.
+# This is the mainmill configuration file for the application.
 # https://www.playframework.com/documentation/latest/ConfigFile
 # ~~~~~
 # Play uses HOCON as its configuration file format.  HOCON has a number
 # of advantages over other config formats, but there are two things that
 # can be used when modifying settings.
 #
-# You can include other configuration files in this main application.conf file:
+# You can include other configuration files in this mainmill application.conf file:
 #include "extra-config.conf"
 #
 # You can declare variables and substitute for them:
@@ -80,7 +80,7 @@ play.modules {
 # to map through to internal messages, or allow the language to be stored in a cookie.
 play.i18n {
   # The application languages
-  langs = [ "en" ]
+  langs = ["en"]
 
   # Whether the language cookie should be secure or not
   #langCookieSecure = true
@@ -200,10 +200,8 @@ play.ws {
 #
 # libraryDependencies += cache
 #
-play.cache {
-  # If you want to bind several caches, you can bind the individually
-  #bindCaches = ["db-cache", "user-cache", "session-cache"]
-}
+play.cache.redis {
+  }
 
 ## Filter Configuration
 # https://www.playframework.com/documentation/latest/Filters
@@ -343,12 +341,12 @@ db {
   # You can declare as many datasources as you want.
   # By convention, the default datasource is named `default`
 
+
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
   #default.driver = org.h2.Driver
   #default.url = "jdbc:h2:mem:play"
   #default.username = sa
   #default.password = ""
-
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
