--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "name": "webtech-mill",
+  "version": "1.0.0",
+  "engines": {
+    "node": "12.14.x"
+  },
   "dependencies": {
     "axios": "^0.19.1",
     "mdbootstrap": "^4.11.0",
@@ -35,6 +40,9 @@
     "cross-env": "^6.0.3",
     "laravel-mix": "^5.0.1"
   },
+  "keywords": [
+    "heroku"
+  ],
   "scripts": {
     "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "dev": "npm run development",
